# finite-domain

./: .gitignore  LICENSE  README.md  fd.cabal  stack.yaml
app/: Main.hs
mhug-talk/: Makefile  constraints.tex
src/: Domain.hs  FD.hs  Queens.hs  Queens2.hs  SendMoreMoney.hs  Sudoku.hs
test/: test.hs  testQueens.hs  testSendMore.hs
