name:                fd
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/dmoverton/finite-domain
license:             BSD3
license-file:        LICENSE
author:              David Overton
maintainer:          david@overtons.id.au
copyright:           2008-2015 David Overton
category:            Constraints
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FD, Domain, Sudoku, Queens, Queens2, SendMoreMoney
  build-depends:       base >= 4.7 && < 5
                    , containers
                    , transformers
                    , lens
  default-language:    Haskell2010

executable fd-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fd
  default-language:    Haskell2010

test-suite fd-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fd
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location:  https://github.com/dmoverton/finite-domain.git
